<resources>
    <string name="app_name">PetRescue</string>
    <string name="reg_strate">REGISTRATE</string>
    <string name="gato">Gato</string>
    <string name="perro">Perro</string>
    <string name="nombre">Nombre</string>
    <string name="celular">Celular</string>
    <string name="nombre_de_tu_mascota">Nombre de tu Mascota</string>
    <string name="raza_de_tu_mascota">Raza de tu mascota</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="nombreApp">PetRescue</string>
    <string name="crea_tu_cuenta">¡Crea tu cuenta!</string>
    <string name="ingresa_con_tu_correo_electr_nico">Ingresa con tu correo electrónico</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>


    <string name="default_web_client_id">23360398520-85gkab9u1g28b31h811cc7ueqp3o1o0v.apps.googleusercontent.com</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chats">Chats</string>

    <string name="tv_Titulo">Titulo</string>

    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>

    <string name="txt_Login">Login</string>
    <string name="et_Email">Correo electrónico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>

    <string name="txt_registro">Registro</string>
    <string name="et_Nombre">Nombres</string>
    <string name="et_R_Registrar">Repita la contraseña</string>
    <string name="btn_Registrar">Registrar</string>

    <string name="btn_actualizarInfo">Actualizar</string>
    <string name="btn_CambiarPass">Cambiar contraseña</string>
    <string name="btn_Cerrarsesion">Cerrar sesión</string>


    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_provedor">Proovedor: </string>
    <string name="tv_provedor"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>

    <string name="Txt_titulo_edit">Editar información</string>
    <string name="btn_Actualizar">Actualizar</string>

    <string name="Txt_cambiar_pass">Cambiar contraseña</string>


    <string name="et_pass_actual">Contraseña Actual</string>
    <string name="et_pass_nueva">Contraseña Nueva</string>
    <string name="et_r_pass_nueva">Repita Contraseña Nueva</string>
    <string name="btn_CambiarPassword">Cambiar</string>

    <string name="item_uid">uid del usuario</string>
    <string name="item_nombre">nombre del usuario</string>
    <string name="item_email">email del usuario</string>

    <string name="et_buscar_usuario">Buscar Usuario</string>

    <string name="txt_nombre_usuario">Nombres</string>
    <string name="Et_mensaje_chat">Escriba su emergencia</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mmm</string>
    
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>