<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white"
    tools:context=".Fragmentos.FragmentPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_perfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_img_perfil" />

        <!--Nombres-->
        <TextView
            android:id="@+id/txt_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_perfil"
            android:layout_marginTop="20dp"
            android:text="@string/txt_nombres" />

        <TextView
            android:id="@+id/tv_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_perfil"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/tv_nombres" />
        <!--Email-->
        <TextView
            android:id="@+id/txt_email"
            android:layout_below="@id/txt_nombres"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_email" />
        <TextView
            android:id="@+id/tv_email"
            android:text="@string/tv_email"
            android:layout_below="@+id/txt_nombres"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Provedor-->
        <TextView
            android:id="@+id/txt_provedor"
            android:text="@string/txt_provedor"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_provedor"
            android:text="@string/tv_provedor"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--Tiempo de Registro-->
        <TextView
            android:id="@+id/txt_t_registro"
            android:text="@string/txt_t_registro"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txt_provedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_t_registro"
            android:text="@string/tv_t_registro"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txt_provedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_actualizarInfo"
            android:text="@string/btn_actualizarInfo"
            android:textAllCaps="true"
            android:layout_below="@+id/tv_t_registro"
            android:layout_centerInParent="true"
            app:cornerRadius="8dp"
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Cerrarsesion"
            android:layout_below="@id/btn_actualizarInfo"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_Cerrarsesion"
            android:textAllCaps="true"
            app:cornerRadius="8dp" />

    </RelativeLayout>


</ScrollView>