<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_splash"
    tools:context=".activities.ResgistroUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_margin="@dimen/margen_general">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_strate"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textSize="@dimen/sizeLetra"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/cafe"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/gato" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/cafe"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/perro" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:text="@string/nombre"
                android:fontFamily="sans-serif-black"
                android:background="@color/white"
                android:layout_margin="5dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:text="@string/celular"
                android:fontFamily="sans-serif-black"
                android:background="@color/white"
                android:layout_margin="5dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:text="@string/nombre_de_tu_mascota"
                android:fontFamily="sans-serif-black"
                android:background="@color/white"
                android:layout_margin="5dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:text="@string/raza_de_tu_mascota"
                android:fontFamily="sans-serif-black"
                android:background="@color/white"
                android:layout_margin="5dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:text="Número de mascotas"
                android:fontFamily="sans-serif-black"
                android:background="@color/white"
                android:layout_margin="5dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/cafe"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:text="@string/registrarme" />
        </LinearLayout>



    </LinearLayout>




</ScrollView>