<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/rojoVinotinto"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margen_general">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreApp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/cafe"
                android:textSize="@dimen/sizeLetra"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/logo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crea_tu_cuenta"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/cafe"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresa_con_tu_correo_electr_nico"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/cafe"
                android:textSize="18sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:text="@string/correo"
                android:fontFamily="sans-serif-black"
                android:background="@color/white"
                android:layout_margin="5dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/alturaEditText"
                android:text="@string/contrase_a"
                android:fontFamily="sans-serif-black"
                android:background="@color/white"
                android:layout_margin="5dp"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ingresar"
                android:backgroundTint="@color/cafe"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>